# govbid

./: .env.example  .gitignore  Dockerfile.consig  Dockerfile.counsel  README.md  docker-compose.yml  download_sam_opportunities.py  federal_contracting_playbook.md  gameplan.docx  pyproject.toml  run_consig.sh  run_consig_api.sh  run_counsel.sh  run_counsel_api.sh  run_daily.sh  run_digest.sh  run_download.sh  run_govclose_transcripts.sh  run_ingest.sh
config/: match-profile.example.yaml  naics2022.json
consig/: __init__.py  branding.py  chat.py  config.py  db.py  main.py  prompts.py  rag.py  survey_schema.py  tools.py  ui.py
counsel/: __init__.py  branding.py  chat.py  config.py  db.py  display.py  main.py  onboarding.py  prompts.py  rag.py  tools.py  ui.py
db/: DATA_DICTIONARY.md
docs/: PAUSE_REPORT.md  STATUS.md  aws-deploy.md  community-standards.md  consig-plan.md  counsel-plan.md  dashboard.md  gameplan.docx  gameplan.md  sam_gov_procurement_framework.md  sdlc.md
scripts/: apply_consig_migration.sh  apply_counsel_migration.sh  apply_fit_survey_migration.sh  apply_migrations.sh  backfill_opportunity_geography.py  build_consig_index.py  build_counsel_index.py  build_naics_lookup.py  check_env.sh  consig_feedback_report.py  counsel_feedback_report.py  doctor.sh  download_sam_opportunities.py  ensure-docker.sh  fetch_govclose_transcripts.sh  generate-n8n-owner-hash.sh  index_fit_feedback.py  ingest_sam_csv.py  init-local-postgres.ps1  init-local-postgres.sh  install_daily_cron.sh  latest_opportunities.py  list_tables.py  match_logic.js  md_to_docx.py  (+24 more)
(+925 files in other folders)
