[project]
name = "govbid"
version = "0.1.0"
description = "SAM.gov ingest, opportunity scoring, GovClose RAG corpus, and capture tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
    "psycopg[binary]>=3.1,<4",
]

[project.optional-dependencies]
docs = ["python-docx>=1.1,<2", "markdown>=3.5,<4"]
