[project]
name = "govbid"
version = "0.1.0"
description = "SAM.gov ingest, opportunity scoring, GovClose RAG corpus, and capture tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
    "psycopg[binary]>=3.1,<4",
]

[project.optional-dependencies]
docs = ["python-docx>=1.1,<2", "markdown>=3.5,<4"]
consig = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "openai>=1.55,<2",
    "chromadb>=0.5,<1",
    "streamlit>=1.40,<2",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6,<7",
    "httpx>=0.27,<1",
]
