[project]
name = "govbid"
version = "0.1.0"
description = "SAM.gov ingest, opportunity scoring, local training corpus RAG, and capture tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
    "psycopg[binary]>=3.1,<4",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
counsel = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "openai>=1.55,<2",
    "chromadb>=0.5,<1",
    "streamlit>=1.40,<2",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
]
